--- a/src/widget/form/profileform.ui
+++ b/src/widget/form/profileform.ui
@@ -138,7 +138,7 @@
        <item>
         <widget class="QGroupBox" name="publicGroup">
          <property name="title">
-          <string>Public Information</string>
+          <string>Public information</string>
          </property>
          <layout class="QHBoxLayout" name="horizontalLayout">
           <item>
@@ -197,8 +197,8 @@
           <item>
            <widget class="CroppingLabel" name="toxIdLabel">
             <property name="toolTip">
-             <string comment="Tox ID tooltip">This bunch of characters tells other Tox clients how to contact you.
-Share it with your friends to communicate.</string>
+             <string comment="Tox ID tooltip">This ID allows other Tox users to add and contact you.
+Share it with your friends to begin chatting.</string>
             </property>
             <property name="text">
              <string>Your Tox ID (click to copy)</string>
