--- a/src/widget/form/settings/advancedsettings.ui
+++ b/src/widget/form/settings/advancedsettings.ui
@@ -83,7 +83,7 @@
           <item>
            <widget class="QPushButton" name="btnCopyDebug">
             <property name="text">
-             <string>Copy Debug Log</string>
+             <string>Copy debug log</string>
             </property>
            </widget>
           </item>
@@ -93,7 +93,7 @@
        <item>
         <widget class="QGroupBox" name="connectionGroup">
          <property name="title">
-          <string>Connection Settings</string>
+          <string>Connection settings</string>
          </property>
          <property name="alignment">
           <set>Qt::AlignLeading|Qt::AlignLeft|Qt::AlignTop</set>
@@ -114,7 +114,7 @@
             <item>
              <widget class="QCheckBox" name="cbEnableUDP">
               <property name="toolTip">
-               <string extracomment="force tcp checkbox tooltip">Disabling this allows, e.g., toxing over Tor. It adds load to the Tox network however, so uncheck only when necessary.</string>
+               <string extracomment="force tcp checkbox tooltip">Disabling this allows, e.g., Tox over Tor. It adds load to the Tox network however, so uncheck only when necessary.</string>
               </property>
               <property name="text">
                <string extracomment="Text on checkbox to disable UDP">Enable UDP (recommended)</string>
