--- a/src/widget/form/settings/privacysettings.ui
+++ b/src/widget/form/settings/privacysettings.ui
@@ -123,13 +123,13 @@ If you are getting spammed with friend requests, change the NoSpam.</string>
           <string/>
          </property>
          <property name="title">
-          <string>BlackList</string>
+          <string>Blacklist</string>
          </property>
          <layout class="QHBoxLayout" name="horizontalLayout_2">
           <item>
            <widget class="QTextEdit" name="blackListTextEdit">
             <property name="toolTip">
-             <string>Filter group message by group member's public key. Put public key here, one per line.</string>
+             <string>Filter group messages by group members' public keys. Put public keys here, one per line.</string>
             </property>
            </widget>
           </item>
