--- a/src/widget/form/settings/aboutsettings.ui
+++ b/src/widget/form/settings/aboutsettings.ui
@@ -360,7 +360,7 @@ p, li { white-space: pre-wrap; }
           </size>
          </property>
          <property name="title">
-          <string>Known issues</string>
+          <string>Known Issues</string>
          </property>
          <layout class="QVBoxLayout" name="verticalLayout_8">
           <item>
