chore(CI): Use docker for CI scripts
Motiviation:
* Reproducing issues in CI is currently difficult
* Predicting issues in CI is currently difficult if you are not on
  ubuntu 18.04
* Reproducing issues submitted from other distros is currently done by
  creating a VM of that distro and building qtox for it locally
* Documentation for how to build on different distros is out of date
* Issues on non-ubuntu distributions are not caught by CI
* Cross compiling for windows locally is not trivial
* Iterating when working with custom build scripts is slow, scripts
  don't necessarily support re-running without re-starting the docker
  container and re-building qtox again
* Updating dependencies is a pain

Changes:
* docker-compose file has been added to the root of our repo.
  After `docker compose run --rm ubuntu` (or other supported distros),
  you are ready to compile and run qtox
* Dependencies are owned by dependency install scripts in buildscripts/.
  This allows us to use the same exact dependencies in our
  OSX/windows/linux scripts
* New docker images have been added for a variety of distributions.
  These are now run in CI in a variety of configurations
  * Docker images are cached in CI so rebuild time for the majority of
    jobs is quite quick
* Build scripts have been trimmed to leverage state of docker
  containers.
  * Windows build script no longer installs anything, dependencies are
    now managed by the windows_builder docker images
  * Build scripts should now be easily re-runnable. Usage is now `docker
    compose run --rm <image>` and then run the scripts
* All artifacts are now uploaded to github after build, this means we
  can take an appimage/flatpak/exe/dmg for any given PR and try it out
  without having to build it ourselves

Notes:
* Docker image size is quite important. We have a maximum of 5GB cache
  space on github actions. The majority of the linux distro docker
  images cache at ~300-400MB, which gives us room to test ~6 distros
  afte

--- a/translations/translations.qrc
+++ b/translations/translations.qrc
@@ -1,51 +1,53 @@
-<RCC>
-    <qresource prefix="/translations">
-        <file>ar.qm</file>
-        <file>be.qm</file>
-        <file>ber.ts</file>
-        <file>bg.qm</file>
-        <file>cs.qm</file>
-        <file>da.qm</file>
-        <file>de.qm</file>
-        <file>el.qm</file>
-        <file>eo.qm</file>
-        <file>es.qm</file>
-        <file>et.qm</file>
-        <file>fa.qm</file>
-        <file>fi.qm</file>
-        <file>fr.qm</file>
-        <file>gl.ts</file>
-        <file>he.qm</file>
-        <file>hr.qm</file>
-        <file>hu.qm</file>
-        <file>it.qm</file>
-        <file>ja.qm</file>
-        <file>jbo.qm</file>
-        <file>kn.ts</file>
-        <file>ko.qm</file>
-        <file>lt.qm</file>
-        <file>mk.qm</file>
-        <file>nl.qm</file>
-        <file>no_nb.qm</file>
-        <file>pl.qm</file>
-        <file>pr.qm</file>
-        <file>pt.qm</file>
-        <file>pt_BR.qm</file>
-        <file>ro.qm</file>
-        <file>ru.qm</file>
-        <file>si.ts</file>
-        <file>sk.qm</file>
-        <file>sl.qm</file>
-        <file>sq.ts</file>
-        <file>sr.qm</file>
-        <file>sr_Latn.qm</file>
-        <file>sv.qm</file>
-        <file>sw.qm</file>
-        <file>ta.qm</file>
-        <file>tr.qm</file>
-        <file>ug.qm</file>
-        <file>uk.qm</file>
-        <file>zh_CN.qm</file>
-        <file>zh_TW.qm</file>
-    </qresource>
-</RCC>
+<!DOCTYPE RCC>
+    <RCC version="1.0">
+      <qresource prefix="/translations">
+        <file alias="ar.qm">/qtox/translations/ar.qm</file>
+    <file alias="be.qm">/qtox/translations/be.qm</file>
+    <file alias="ber.qm">/qtox/translations/ber.qm</file>
+    <file alias="bg.qm">/qtox/translations/bg.qm</file>
+    <file alias="cs.qm">/qtox/translations/cs.qm</file>
+    <file alias="da.qm">/qtox/translations/da.qm</file>
+    <file alias="de.qm">/qtox/translations/de.qm</file>
+    <file alias="el.qm">/qtox/translations/el.qm</file>
+    <file alias="eo.qm">/qtox/translations/eo.qm</file>
+    <file alias="es.qm">/qtox/translations/es.qm</file>
+    <file alias="et.qm">/qtox/translations/et.qm</file>
+    <file alias="fa.qm">/qtox/translations/fa.qm</file>
+    <file alias="fi.qm">/qtox/translations/fi.qm</file>
+    <file alias="fr.qm">/qtox/translations/fr.qm</file>
+    <file alias="gl.qm">/qtox/translations/gl.qm</file>
+    <file alias="he.qm">/qtox/translations/he.qm</file>
+    <file alias="hr.qm">/qtox/translations/hr.qm</file>
+    <file alias="hu.qm">/qtox/translations/hu.qm</file>
+    <file alias="it.qm">/qtox/translations/it.qm</file>
+    <file alias="ja.qm">/qtox/translations/ja.qm</file>
+    <file alias="jbo.qm">/qtox/translations/jbo.qm</file>
+    <file alias="kn.qm">/qtox/translations/kn.qm</file>
+    <file alias="ko.qm">/qtox/translations/ko.qm</file>
+    <file alias="lt.qm">/qtox/translations/lt.qm</file>
+    <file alias="mk.qm">/qtox/translations/mk.qm</file>
+    <file alias="nl.qm">/qtox/translations/nl.qm</file>
+    <file alias="no_nb.qm">/qtox/translations/no_nb.qm</file>
+    <file alias="pl.qm">/qtox/translations/pl.qm</file>
+    <file alias="pr.qm">/qtox/translations/pr.qm</file>
+    <file alias="pt.qm">/qtox/translations/pt.qm</file>
+    <file alias="pt_BR.qm">/qtox/translations/pt_BR.qm</file>
+    <file alias="ro.qm">/qtox/translations/ro.qm</file>
+    <file alias="ru.qm">/qtox/translations/ru.qm</file>
+    <file alias="si.qm">/qtox/translations/si.qm</file>
+    <file alias="sk.qm">/qtox/translations/sk.qm</file>
+    <file alias="sl.qm">/qtox/translations/sl.qm</file>
+    <file alias="sq.qm">/qtox/translations/sq.qm</file>
+    <file alias="sr.qm">/qtox/translations/sr.qm</file>
+    <file alias="sr_Latn.qm">/qtox/translations/sr_Latn.qm</file>
+    <file alias="sv.qm">/qtox/translations/sv.qm</file>
+    <file alias="sw.qm">/qtox/translations/sw.qm</file>
+    <file alias="ta.qm">/qtox/translations/ta.qm</file>
+    <file alias="tr.qm">/qtox/translations/tr.qm</file>
+    <file alias="ug.qm">/qtox/translations/ug.qm</file>
+    <file alias="uk.qm">/qtox/translations/uk.qm</file>
+    <file alias="zh_CN.qm">/qtox/translations/zh_CN.qm</file>
+    <file alias="zh_TW.qm">/qtox/translations/zh_TW.qm</file>
+  </qresource>
+    </RCC>
+    
