feat(l10n): Add Urdu and Icelandic translations

--- a/translations/translations.qrc
+++ b/translations/translations.qrc
@@ -18,6 +18,7 @@
         <file>he.qm</file>
         <file>hr.qm</file>
         <file>hu.qm</file>
+        <file>is.qm</file>
         <file>it.qm</file>
         <file>ja.qm</file>
         <file>jbo.qm</file>
@@ -44,6 +45,7 @@
         <file>ta.qm</file>
         <file>tr.qm</file>
         <file>ug.qm</file>
+        <file>ur.qm</file>
         <file>uk.qm</file>
         <file>zh_CN.qm</file>
         <file>zh_TW.qm</file>
