feat(i18n): Handle English plural forms in translations
Special case that only needs plurals translated.

--- a/translations/translations.qrc
+++ b/translations/translations.qrc
@@ -8,6 +8,7 @@
         <file>da.qm</file>
         <file>de.qm</file>
         <file>el.qm</file>
+        <file>en.qm</file>
         <file>eo.qm</file>
         <file>es.qm</file>
         <file>et.qm</file>
