--- a/res.qrc
+++ b/res.qrc
@@ -31,6 +31,7 @@
         <file>img/status/extensions_available.svg</file>
         <file>img/status/extensions_partial.svg</file>
         <file>img/status/extensions_unavailable.svg</file>
+        <file>img/status/blocked.svg</file>
         <file>img/taskbar/dark/taskbar_online.svg</file>
         <file>img/taskbar/dark/taskbar_online_event.svg</file>
         <file>img/taskbar/dark/taskbar_away.svg</file>
